fix different email button

--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -191,7 +191,7 @@
                                     <span class="kori-login__message awaiting-link kori-login__text-secondary">Magic link sent!</span>
                                     <div class="kori-login__different-email">
                                         <button class="kori-login__text-secondary resend-link">Resend</button>
-                                        <button class="kori-login different-email" @onclick=ClearInput><img src="_content/Kori/icons/Login.svg" /> Try a different email</button>
+                                        <button class="kori-login__btn kori-login__text-btn different-email" @onclick=ClearInput><img src="_content/Kori/icons/Login.svg" /> Try a different email</button>
                                     </div>
                                 </div>
                                 <div class="kori-login__use-passkey">
@@ -222,7 +222,7 @@
                                     <span class="kori-login__message awaiting-link kori-login__text-secondary">Magic link sent!</span>
                                     <div class="kori-login__different-email">
                                         <button class="kori-login__text-secondary resend-link">Resend</button>
-                                        <button class="kori-login__text-btn different-email" @onclick=ClearInput><img src="_content/Kori/icons/Login.svg" /> Try different email</button>
+                                        <button class="kori-login__btn kori-login__text-btn different-email" @onclick=ClearInput><img src="_content/Kori/icons/Login.svg" /> Try different email</button>
                                     </div>
                                 </div>
                                 <div class="kori-login__use-passkey">
