--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -132,11 +132,11 @@
         .kori-desktop {
             display: flex;
             flex-direction: column;
-            gap: 16px;
         }
 
         .kori-login__menu-divider {
             width: 100%;
+            margin: 16px 0;
             border-bottom: 1px solid rgba(255, 255, 255, 0.80);
         }
 
