--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -390,46 +390,48 @@
         .kori-mobile {
             display: block;
 
-            .tabs {
+            #kori-login__tabs {
+                --indicator-offset: 0px;
+                --indicator-width: 50%;
+                position: relative;
                 margin: 0 -16px;
                 margin-bottom: 24px;
                 display: flex;
                 justify-content: space-around;
-                border-bottom: 2px solid var(--Gray-800, #1E1E1E);
+                border-bottom: 2px solid var(--gray-800, #1E1E1E);
                 color: #FFF;
 
-                div {
+                .kori-login__tab {
                     width: 100%;
                     padding-bottom: 10px;
                     text-align: center;
                     cursor: pointer;
+                    transition: 300ms;
                 }
-
-                .show {
+                /*.active {
                     border-bottom: 2px solid #FFF;
+                }*/
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    height: 2px;
+                    width: var(--indicator-width);
+                    left: var(--indicator-offset);
+                    bottom: -1px;
+                    background: #FFF;
+                    transition: left 300ms, width 300ms;
                 }
             }
 
-            .kori-login__tab {
-                display: none;
-                animation: kori-login__fadeIn 300ms ease-in-out;
-
-                &.show {
-                    display: block !important;
-                }
-            }
-
-            .kori-login__language {
-                display: none;
-                animation: kori-login__fadeIn 300ms ease-in-out;
-
-                &.show {
-                    display: block !important;
-                }
-            }
-
-            #kori-login-menu-mobile {
+            .kori-login__menu-mobile, .kori-login__language {
                 padding: 64px;
+                display: none;
+                animation: kori-login__fadeIn 300ms ease-in-out;
+
+                &.show {
+                    display: block !important;
+                }
             }
         }
 
@@ -463,7 +465,7 @@
 
     @media only screen and (max-width: 839px) {
         .kori-mobile {
-            #kori-login-menu-mobile {
+            .kori-login__menu-mobile, .kori-login__language {
                 padding: 44px;
             }
         }
@@ -471,7 +473,7 @@
 
     @media only screen and (max-width: 550px) {
         .kori-mobile {
-            #kori-login-menu-mobile {
+            .kori-login__menu-mobile, .kori-login__language {
                 padding: 0;
             }
         }
